8019833: Wrong JNI error code for preexisting JVM

Return the appropriate JNI error message (instead of the generic one) when the JVM is already started

Reviewed-by: coleenp, hseigel